# Investigacion

./: .gitignore  README.md
.github/: CODEOWNERS
CUDA/: chole.ipynb  constantes.h  ec_calor_2d_tdma_parallel.c  herramientas.h  pruebas_julia.ipynb
CUDA/CUSOLVER/: herramientas.h  main.c  main.cu  sistema_de_prueba.h
CUDA/InterfazFortran/: interfaz.f90
CUDA/MultiplicationMatrixVector/: test  utility_routines.h
CUDA/Pruebas_Magma/dense/: ejemplo_lapack.c  ejemplo_magma_gpu.c  ejemplo_magma_mc.c  ejmaggpu
CUDA/Pruebas_Magma/ecuacion_calor_2D_sparse_cusolver/: cuda_mem.h  herramientas.h
CUDA/Pruebas_Magma/sparse/: ejemplo_magma_gpu.c
CUDA/Pruebas_Rendimiento/: copiar_desde_gpuserver.sh  copiar_hacia_gpuserver.sh
CUDA/Pruebas_Rendimiento/gpuserver/: tiempos_medidos_1024x512.csv  tiempos_medidos_128x64.csv  (+4 more)
CUDA/ecCalor2D-CLang/: compiler.sh  constantes.h  constantes2.h  ec_calor_2d_cusolver.c  ec_calor_2d_tdma_parallel.c  herramientas.h  herramientas2.h
CUDA/ec_calor_1D_C_lang_version/: eq_heat_1d_lapacke_solver.c
CUDA/ec_calor_1d/: herramientas.h  install_lapcke_cblas.md  readme.md  respaldo_lapacke.c
OpenACC/SIMPLE2D/: SIMPLE2D  SIMPLE2D-gpu  SIMPLE2D-multicore  SIMPLE2D-seq  SIMPLE2D-test  comp_fortran_intel.sh  corrector_presion.f90  corrector_presion.f90~  ejemplo  ensamblaje.f90  ensamblaje.f90~  executor-hipatia.sh  fort.101  fort.102  main.f90  main.f90~  mod_cond_frontera.f90  mod_ec_energia.f90  mod_ec_momento.f90  mod_ensamblaje.f90  mod_front_inmersa.f90  mod_malla.f90  mod_postproceso.f90  mod_residuos.f90  mod_solucionador.f90  nusselt.f90  postproceso.f90  prueba.nvvp  residuou.f90  residuov.f90  temp.f90  tri.f90  vel_u.f90  vel_v.f90
OpenACC/SIMPLE2D/source/: CMakeLists.txt  mod_ec_energia.f90  mod_front_inmersa.f90  mod_postproceso.f90  mod_solucionador.f90  mod_variables.f90
OpenACC/SIMPLE3D/: compilacion.sh  constantes.f90  corrector_presion.f90  main.f90  mod_ec_continuidad.f90  mod_ec_energia.f90  mod_ec_momento.f90  mod_malla.f90  mod_postproceso.f90  nusselt.f90  postproceso.f90  temp.f90  vel_u.f90  vel_v.f90  vel_w.f90
OpenACC/calor2D/: a.out  constantes.f90  constantes.mod  ecCalor2D_tdma_parallel.f90  tri.f90
OpenACC/calor2DAcc/: calor2D  calor2D-multicore  calor2D-secuencial  compiler.sh  constantes.f90  constantes.mod  ecCalor2D_tdma_parallel.f90  ecCalor2D_tdma_parallel_arreglos1D.f90  ecCalor2Dacc  fort.101  profile.sh  prueba.nvvp  report.qdstrm  reportCalor2D.nsys-rep  reportCalor2D.sqlite  test  trian.f90  trian.mod
OpenACC/examplesOpenACC/: README.md  prueba
OpenACC/integrador_2d/: Makefile  how_to_use_cmake.md  main.f90  resolver_sel.f90  sp_integrador_2d.f90
OpenACC/integrador_3d/: Makefile  get_coef.f90
OpenACC/magma/: envmagma.sh  example_lapack_lu.f90  example_magma_lu.f90
OpenACC/test/: pyproject.toml
OpenACC/test/pytest/: main.py  tiempos_medidos_10000.csv  tiempos_medidos_128x64.csv  tiempos_medidos_15000.csv  tiempos_medidos_256x128.csv  tiempos_medidos_5000.csv
OpenACC/test/source/: CMakeLists.txt  constantes.f90  ecCalor2D_tdma_parallel_arreglos1D.f90
OpenMP/: README.md
OpenMP/SIMPLE3D/: IXCHEL.f90  compilacion.sh  mod_ec_continuidad.f90  mod_ec_energia.f90  mod_ec_momento.f90  mod_malla.f90  mod_solucionador.f90  temp.f90
OpenMP/calor2D/: a.out  calor  constantes.f90  constantes.mod  ecCalor2D_tdma_parallel.f90  report.nsys-rep  report.qdstrm  report.sqlite  tri.f90
(+133 files in other folders)
